[gd_scene load_steps=6 format=3 uid="uid://cs0kljr87jqpq"]

[ext_resource type="Script" uid="uid://cn260c0xleg6q" path="res://journal/inside_book.gd" id="1_oj0dl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8xuce"]
bg_color = Color(0.91764706, 0.84705883, 0.69411767, 1)
border_width_top = 4
border_color = Color(0.22352941, 0.42745098, 0.54901963, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6g7a"]
bg_color = Color(0.22352941, 0.42745098, 0.54901963, 1)

[sub_resource type="Theme" id="Theme_160wc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oj0dl"]
bg_color = Color(0.8697165, 0.46338415, 0.4559896, 1)

[node name="BookUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -7.0
offset_top = 3.0
offset_right = -7.0
offset_bottom = 3.0
scale = Vector2(0.8399994, 0.5200006)
script = ExtResource("1_oj0dl")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
offset_left = -352.3812
offset_top = -351.92264
offset_right = 334.67416
offset_bottom = 247.08676
scale = Vector2(1.09523, 1.2350922)
theme_override_styles/panel = SubResource("StyleBoxFlat_8xuce")

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.269989
offset_right = -96.59686
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.1600004, 1)
theme_override_constants/separation = 0

[node name="CharacterList" type="ItemList" parent="Background/HBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 25
theme_override_styles/panel = SubResource("StyleBoxFlat_f6g7a")

[node name="EntryPanel" type="VBoxContainer" parent="Background/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_160wc")
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="Background/HBoxContainer/EntryPanel"]
custom_minimum_size = Vector2(100, 75)
layout_mode = 2
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="Portrait" type="TextureRect" parent="Background/HBoxContainer/EntryPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
stretch_mode = 4

[node name="BioScroll" type="ScrollContainer" parent="Background/HBoxContainer/EntryPanel"]
custom_minimum_size = Vector2(15, 300)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oj0dl")

[node name="BioText" type="RichTextLabel" parent="Background/HBoxContainer/EntryPanel/BioScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 25

[node name="ExitButton" type="Button" parent="."]
layout_mode = 0
offset_left = 264.28592
offset_top = -317.30734
offset_right = 359.874
offset_bottom = -219.23056
theme_override_font_sizes/font_size = 40
text = "X"

[connection signal="item_selected" from="Background/HBoxContainer/CharacterList" to="." method="_on_character_list_item_selected"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
